--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,20 @@ linux-2.6 (2.6.32-35) UNRELEASED; urgency=low
   * bnx2x: Add support for BCM84823
   * ar9170usb: Add several additional USB device IDs
   * net: Add bna driver for Brocade Ethernet adapters
+  * Add longterm release 2.6.32.40, including:
+    - ubifs: Fix master node recovery
+    - dasd: Correct device table
+    - udp: Fix bogus UFO packet generation (Closes: #626284)
+    - pmcraid: Reject negative request size
+    - af_unix: Only allow recv on connected seqpacket sockets.
+    - [armel] Prevent heap corruption in OABI semtimedop
+    - usb: musb: core: set has_tt flag
+    For the complete list of changes, see:
+     http://www.kernel.org/pub/linux/kernel/v2.6/longterm/v2.6.32/ChangeLog-2.6.32.40
+  * USB: Prevent buggy hubs from crashing the USB stack (deferred from
+    2.6.32.29 due to regressions which were fixed in 2.6.32.40)
+  * [x86] cpu: Set ARAT feature on some AMD processors (deferred from
+    2.6.32.39 due to apparent regression which was fixed in 2.6.32.40)
 
   [ Ian Campbell ]
   * Remove lazy vunmap for non-Xen flavours too. (Closes: #613634)
