Start work on including selected changes from 2.6.27.59
svn path=/dists/lenny/linux-2.6/; revision=17399

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
   * rt2x00: Fix memory leak after failing to insert RTS/CTS frame
     (Closes: #561890)
 
+  [ dann frazier ]
+  * Include selected backports from 2.6.27.59:
+
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
 linux-2.6 (2.6.26-26lenny2) stable-security; urgency=high
