--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
 
   [ dann frazier ]
   * Include selected backports from 2.6.27.59:
+    - scsi: fix medium error problems with some arrays which can cause
+            data corruption
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
