ptrace: use safer wake up on ptrace_detach()
svn path=/dists/lenny/linux-2.6/; revision=17402

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
     - scsi: fix medium error problems with some arrays which can cause
             data corruption
     - NFS: fix the return value of nfs_file_fsync()
+    - ptrace: use safer wake up on ptrace_detach()
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
