[x86] mm: avoid possible bogus tlb entries by clearing prev mm_cpumask after switching mm
svn path=/dists/lenny/linux-2.6/; revision=17403

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
             data corruption
     - NFS: fix the return value of nfs_file_fsync()
     - ptrace: use safer wake up on ptrace_detach()
+    - [x86] mm: avoid possible bogus tlb entries by clearing prev mm_cpumask
+      after switching mm
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
