--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
     - ptrace: use safer wake up on ptrace_detach()
     - [x86] mm: avoid possible bogus tlb entries by clearing prev mm_cpumask
       after switching mm
+    - dm raid1: fail writes if errors are not handled and log fails
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
