--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
     - [x86] mm: avoid possible bogus tlb entries by clearing prev mm_cpumask
       after switching mm
     - dm raid1: fail writes if errors are not handled and log fails
+    - [x86] asus_acpi: world-writable procfs files
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
