[x86] acer-wmi: world-writable sysfs threeg file
svn path=/dists/lenny/linux-2.6/; revision=17406

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
       after switching mm
     - dm raid1: fail writes if errors are not handled and log fails
     - [x86] asus_acpi: world-writable procfs files
+    - [x86] acer-wmi: world-writable sysfs threeg file
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
