--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
     - dm raid1: fail writes if errors are not handled and log fails
     - [x86] asus_acpi: world-writable procfs files
     - [x86] acer-wmi: world-writable sysfs threeg file
+    - [x86] tc1100-wmi: world-writable sysfs wireless and jogdial files
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
