--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
     - [x86] acer-wmi: world-writable sysfs threeg file
     - [x86] tc1100-wmi: world-writable sysfs wireless and jogdial files
     - NFSD: memory corruption due to writing beyond the stat array
+    - ext2: Fix link count corruption under heavy link+rename load
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
