--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,7 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
     - NFSD: memory corruption due to writing beyond the stat array
     - ext2: Fix link count corruption under heavy link+rename load
     - virtio: set pci bus master enable bit
+    - [s390] keyboard: integer underflow bug
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
