--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
     - ext2: Fix link count corruption under heavy link+rename load
     - virtio: set pci bus master enable bit
     - [s390] keyboard: integer underflow bug
+    - ocfs2_connection_find() returns pointer to bad structure
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
