--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
     - virtio: set pci bus master enable bit
     - [s390] keyboard: integer underflow bug
     - ocfs2_connection_find() returns pointer to bad structure
+    - libsas: fix runaway error handler problem
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
