--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
     - [s390] keyboard: integer underflow bug
     - ocfs2_connection_find() returns pointer to bad structure
     - libsas: fix runaway error handler problem
+    - NFS: Fix "kernel BUG at fs/aio.c:554!"
+
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
