--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
     (Closes: #561890)
 
   [ dann frazier ]
+  * Include selected backport from 2.6.27.58:
+    - md: fix bug with re-adding of partially recovered device.
   * Include selected backports from 2.6.27.59:
     - scsi: fix medium error problems with some arrays which can cause
             data corruption
@@ -25,7 +27,6 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
     - ocfs2_connection_find() returns pointer to bad structure
     - libsas: fix runaway error handler problem
     - NFS: Fix "kernel BUG at fs/aio.c:554!"
-
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
