md: fix regression with re-adding devices to arrays with no metadata
svn path=/dists/lenny/linux-2.6/; revision=17418

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
     - ocfs2_connection_find() returns pointer to bad structure
     - libsas: fix runaway error handler problem
     - NFS: Fix "kernel BUG at fs/aio.c:554!"
+    - md: fix regression with re-adding devices to arrays with no metadata
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
