--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,7 @@ linux-2.6 (2.6.26-27) UNRELEASED; urgency=low
     - md: fix regression with re-adding devices to arrays with no metadata
     - [x86] Flush TLB if PGD entry is changed in i386 PAE mode
     - ext3: skip orphan cleanup on rocompat fs
+    - cciss: fix lost command issue
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 29 Nov 2010 02:01:24 +0000
 
