[hppa] Bump ABI to 5a
Seems to be required due to switching from SLUB to SLAB.

svn path=/dists/squeeze/linux-2.6/; revision=17428

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ linux-2.6 (2.6.32-35) UNRELEASED; urgency=low
     - ubifs: Fix master node recovery
     - dasd: Correct device table
     - udp: Fix bogus UFO packet generation (Closes: #626284)
+    - [hppa] slub: Disable use with DISCONTIGMEM && !NUMA
     - pmcraid: Reject negative request size
     - af_unix: Only allow recv on connected seqpacket sockets.
     - [armel] Prevent heap corruption in OABI semtimedop
@@ -23,6 +24,7 @@ linux-2.6 (2.6.32-35) UNRELEASED; urgency=low
     2.6.32.29 due to regressions which were fixed in 2.6.32.40)
   * [x86] cpu: Set ARAT feature on some AMD processors (deferred from
     2.6.32.39 due to apparent regression which was fixed in 2.6.32.40)
+  * [hppa] Bump ABI to 5a
 
   [ Ian Campbell ]
   * Remove lazy vunmap for non-Xen flavours too. (Closes: #613634)
