add bug closers for 2.6.32.40
svn path=/dists/squeeze/linux-2.6/; revision=17429

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,13 +11,15 @@ linux-2.6 (2.6.32-35) UNRELEASED; urgency=low
   * net: Add bna driver for Brocade Ethernet adapters
   * Add longterm release 2.6.32.40, including:
     - ubifs: Fix master node recovery
-    - dasd: Correct device table
+    - dasd: Correct device table (Closes: #607416)
     - udp: Fix bogus UFO packet generation (Closes: #626284)
     - [hppa] slub: Disable use with DISCONTIGMEM && !NUMA
     - pmcraid: Reject negative request size
     - af_unix: Only allow recv on connected seqpacket sockets.
     - [armel] Prevent heap corruption in OABI semtimedop
     - usb: musb: core: set has_tt flag
+    - NFS: nfs_wcc_update_inode() should set nfsi->attr_gencount
+      (Closes: #617364)
     For the complete list of changes, see:
      http://www.kernel.org/pub/linux/kernel/v2.6/longterm/v2.6.32/ChangeLog-2.6.32.40
   * USB: Prevent buggy hubs from crashing the USB stack (deferred from
