[armel] Implement accept4() system call (Closes: #625752)
svn path=/dists/squeeze/linux-2.6/; revision=17431

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ linux-2.6 (2.6.32-35) UNRELEASED; urgency=low
   * [x86] cpu: Set ARAT feature on some AMD processors (deferred from
     2.6.32.39 due to apparent regression which was fixed in 2.6.32.40)
   * [hppa] Bump ABI to 5a
+  * [armel] Implement accept4() system call (Closes: #625752)
 
   [ Ian Campbell ]
   * Remove lazy vunmap for non-Xen flavours too. (Closes: #613634)
