prepare for release
svn path=/dists/squeeze-security/linux-2.6/; revision=17455

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.32-34squeeze1) UNRELEASED; urgency=high
+linux-2.6 (2.6.32-34squeeze1) stable-security; urgency=high
 
   * Validate size of EFI GUID partition entries (CVE-2011-1776)
   * [cifs] fix session reuse issue (CVE-2011-1585):
@@ -9,7 +9,7 @@ linux-2.6 (2.6.32-34squeeze1) UNRELEASED; urgency=high
   * dccp: handle invalid feature options length (CVE-2011-1770)
   * [arm] 6891/1: prevent heap corruption in OABI semtimedop (CVE-2011-1759)
 
- -- dann frazier <dannf@debian.org>  Tue, 17 May 2011 00:41:07 -0600
+ -- dann frazier <dannf@debian.org>  Wed, 18 May 2011 00:18:23 -0600
 
 linux-2.6 (2.6.32-34) stable; urgency=high
 
