--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ linux (3.2.57-3+deb7u1) UNRELEASED; urgency=high
     (CVE-2014-3122)
   * net: ipv4: current group_info should be put after using. (CVE-2014-2851)
   * Revert "isci: fix reset timeout handling" (Closes: #746642)
+  * skbuff: export skb_copy_ubufs (Closes: #746602)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 10 May 2014 21:20:57 +0100
 
