--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux (3.2.57-3+deb7u1) UNRELEASED; urgency=high
+linux (3.2.57-3+deb7u1) stable-security; urgency=high
 
   * n_tty: Fix n_tty_write crash when echoing in raw mode (CVE-2014-0196)
     (Closes: #747166)
@@ -13,7 +13,7 @@ linux (3.2.57-3+deb7u1) UNRELEASED; urgency=high
   * Revert "perf/x86/amd/ibs: Fix waking up from S3 for AMD family 10h"
     (Closes: #746411)
 
- -- Ben Hutchings <ben@decadent.org.uk>  Sat, 10 May 2014 21:20:57 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 12 May 2014 13:45:14 +0100
 
 linux (3.2.57-3) wheezy; urgency=medium
 
