Revert changelog to the version uploaded as 3.2.57-3+deb7u1
svn path=/dists/wheezy-security/linux/; revision=21322

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,19 +1,18 @@
-linux (3.2.57-3+deb7u1) stable-security; urgency=high
+linux (3.2.57-3+deb7u1) wheezy-security; urgency=high
 
   * n_tty: Fix n_tty_write crash when echoing in raw mode (CVE-2014-0196)
-    (Closes: #747166)
   * floppy: ignore kernel-only members in FDRAWCMD ioctl input (CVE-2014-1737)
   * floppy: don't write kernel-only members to FDRAWCMD ioctl output
     (CVE-2014-1738)
   * mm: try_to_unmap_cluster() should lock_page() before mlocking
-    (CVE-2014-3122) (Closes: #747326)
+    (CVE-2014-3122)
   * net: ipv4: current group_info should be put after using. (CVE-2014-2851)
   * Revert "isci: fix reset timeout handling" (Closes: #746642)
   * skbuff: export skb_copy_ubufs (Closes: #746602)
   * Revert "perf/x86/amd/ibs: Fix waking up from S3 for AMD family 10h"
     (Closes: #746411)
 
- -- Ben Hutchings <ben@decadent.org.uk>  Mon, 12 May 2014 13:45:14 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 10 May 2014 21:20:57 +0100
 
 linux (3.2.57-3) wheezy; urgency=medium
 
