--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux (3.2.61-1) UNRELEASED; urgency=medium
+linux (3.2.63-1) UNRELEASED; urgency=medium
 
   * New upstream stable update:
     http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.61
@@ -57,9 +57,128 @@ linux (3.2.61-1) UNRELEASED; urgency=medium
     - net: fix inet_getid() and ipv6_select_ident() bugs
     - target: Explicitly clear ramdisk_mcp backend pages
     - iommu/vt-d: Fix missing IOTLB flush in intel_iommu_unmap()
+    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.62
+    - ibmvscsi: Add memory barriers for send / receive
+    - cpuset,mempolicy: fix sleeping function called from invalid context
+    - nfsd: fix rare symlink decoding bug
+    - md: flush writes before starting a recovery.
+    - drm/vmwgfx: Fix incorrect write to read-only register v2:
+      (regression in 3.2.58)
+    - ACPI / EC: Avoid race condition related to advance_transaction()
+    - ACPI / EC: Fix race condition in ec_transaction_completed()
+    - hwmon: (adm1031) Fix writes to limit registers
+    - alarmtimer: Fix bug where relative alarm timers were treated as absolute
+    - dm io: fix a race condition in the wake up code for sync_io
+    - sched: Fix possible divide by zero in avg_atom() calculation
+    - locking/mutex: Disable optimistic spinning on some architectures
+    - hwmon: (adt7470) Fix writes to temperature limit registers
+    - usb: Check if port status is equal to RxDetect (regression in 3.2.38)
+    - tcp: fix tcp_match_skb_to_sack() for unaligned SACK at end of an skb
+    - igmp: fix the problem when mc leave group
+    - appletalk: Fix socket referencing in skb
+    - net: sctp: fix information leaks in ulpevent layer
+    - dns_resolver: assure that dns_query() result is null-terminated
+    - dns_resolver: Null-terminate the right string
+    - rtnetlink: fix userspace API breakage for iproute2 < v3.9.0
+      (regression in 3.2.45)
+    - netfilter: ipt_ULOG: fix info leaks
+    - xfs: fix allocbt cursor leak in xfs_alloc_ag_vextent_near
+    - xfs: really fix the cursor leak in xfs_alloc_ag_vextent_near
+    - shmem: fix faulting into a hole, not taking i_mutex (CVE-2014-4171)
+    - shmem: fix splicing from a hole while it's punched (CVE-2014-4171)
+    - [x86] x86-32, espfix: Remove filter for espfix32 due to race
+    - sym53c8xx_2: Set DID_REQUEUE return code when aborting squeue
+    - mm: hugetlb: fix copy_hugetlb_page_range() (regression in 3.2.61)
+    - [arm*] 7668/1: fix memset-related crashes caused by recent GCC (4.7.2)
+      optimizations
+    - [arm*] 7670/1: fix the memset fix
+    - ceph: fix overflow check in build_snap_context()
+    - libata: support the ata host which implements a queue depth less than 32
+      (regression in 3.2.59)
+    - libata: introduce ata_host->n_tags to avoid oops on SAS controllers
+    - [x86] x86_32, entry: Store badsys error code in %eax
+      (regression in 3.2.60-1)
+    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.63
+    - [x86] KVM: Inter-privilege level ret emulation is not implemeneted
+    - block: don't assume last put of shared tags is for the host
+    - debugfs: Fix corrupted loop in debugfs_remove_recursive
+    - mtd/ftl: fix the double free of the buffers allocated in build_maps()
+    - [x86] don't exclude low BIOS area when allocating address space for
+      non-PCI cards (regression in 2.6.37)
+    - scsi: handle flush errors properly
+    - hwmon: (smsc47m192) Fix temperature limit and vrm write operations
+    - staging: vt6655: Fix Warning on boot handle_irq_event_percpu.
+    - [mips,powerpc] bfa: Fix undefined bit shift on big-endian architectures
+      with 32-bit DMA address
+    - Drivers: scsi: storvsc: Implement a eh_timed_out handler
+    - iommu/vt-d: Exclude devices using RMRRs from IOMMU API domains
+    - net: sendmsg: fix NULL pointer dereference
+    - hwmon: (ads1015) Fix off-by-one for valid channel index checking
+    - [mips*] tlbex: Fix a missing statement for HUGETLB
+    - [mips*] Prevent user from setting FCSR cause bits
+    - md/raid1,raid10: always abort recover on write error.
+    - ext4: fix ext4_discard_allocated_blocks() if we can't allocate the pa
+      struct
+    - hwmon: (lm85) Fix various errors on attribute writes
+    - hwmon: (amc6821) Fix possible race condition bug
+    - crypto: af_alg - properly label AF_ALG socket
+    - mnt: Change the default remount atime from relatime to the existing value
+    - netlabel: fix a problem when setting bits below the previously lowest bit
+    - hwmon: (ads1015) Fix out-of-bounds array access
+    - [s390*] locking: Reenable optimistic spinning
+    - ring-buffer: Always reset iterator to reader page
+    - reiserfs: Fix use after free in journal teardown
+    - [powerpc*] mm: Use read barrier when creating real_pte
+    - Btrfs: fix csum tree corruption, duplicate and outdated checksums
+    - CIFS: Fix wrong directory attributes after rename
+    - md/raid6: avoid data corruption during recovery of double-degraded RAID6
+    - iommu/amd: Fix cleanup_domain for mass device removal
+    - pata_scc: propagate return value of scc_wait_after_reset
+    - kvm: iommu: fix the third parameter of kvm_iommu_put_pages
+      (CVE-2014-3601)
+    - [mips*/octeon] make get_system_type() thread-safe
+    - xhci: rework cycle bit checking for new dequeue pointers
+      (regression in 3.2.59)
+    - isofs: Fix unbounded recursion when processing relocated directories
+    - HID: logitech: perform bounds checking on device_id early enough
+    - USB: whiteheat: Added bounds checking for bulk command response
+    - HID: logitech-dj: prevent false errors to be shown
+    - ACPI / EC: Add support to disallow QR_EC to be issued when SCI_EVT isn't
+      set (regression in 3.2.62)
+    - HID: magicmouse: sanity check report size in raw_event() callback
+    - HID: picolcd: sanity check report size in raw_event() callback
+    - [armhf] 8128/1: abort: don't clear the exclusive monitors
+    - [armhf] 8129/1: errata: work around Cortex-A15 erratum 830321 using dummy
+      strex
+    - USB: serial: fix potential stack buffer overflow
+    - USB: serial: fix potential heap buffer overflow
+    - [mips*] Fix accessing to per-cpu data when flushing the cache
+    - inetpeer: get rid of ip_id_count
+    - ip: make IP identifiers less predictable
+    - tcp: Fix integer-overflows in TCP veno
+    - tcp: Fix integer-overflow in TCP vegas
+    - net: sctp: inherit auth_capable on INIT collisions
+    - iovec: make sure the caller actually wants anything in
+      memcpy_fromiovecend
+    - sctp: fix possible seqlock seadlock in sctp_packet_transmit()
+    - [sparc] Fix argument sign extension for compat_sys_futex().
+    - [sparc] Handle 32-bit tasks properly in compute_effective_address().
+    - [sparc] Fix top-level fault handling bugs.
+    - [sparc] Don't bark so loudly about 32-bit tasks generating 64-bit fault
+      addresses.
+    - [sparc] Fix huge TSB mapping on pre-UltraSPARC-III cpus.
+    - [sparc] Add membar to Niagara2 memcpy code.
+    - [sparc] Do not insert non-valid PTEs into the TSB hash table.
+    - [sparc] arch/sparc/math-emu/math_32.c: drop stray break operator
+    - [amd64] Revert "x86-64, modify_ldt: Make support for 16-bit segments a
+      runtime option"
+    - [amd64] x86-64, espfix: Don't leak bits 31:16 of %esp returning to 16-bit
+      stack
+    - [amd64] x86_64/entry/xen: Do not invoke espfix64 on Xen
+    - [amd64] x86/espfix/xen: Fix allocation of pages for paravirt page tables
 
   [ Ben Hutchings ]
-  * drm, agp: Update to 3.4.99:
+  * drm, agp: Update to 3.4.103:
     - drm/radeon: only apply hdmi bpc pll flags when encoder mode is hdmi
     - drm/radeon: fix typo in radeon_connector_is_dp12_capable()
     - drm/radeon/atom: fix dithering on certain panels
