[x86] KVM: pass host_initiated to functions that read MSRs
Refresh to early appied patch which needed additional backporting

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ linux (3.16.36-2) UNRELEASED; urgency=medium
   * [mips*] Fix ptrace handling of any syscalls returning ENOSYS.
 
   [ Salvatore Bonaccorso ]
+  * [x86] KVM: pass host_initiated to functions that read MSRs
   * [x86] KVM: VMX: Fix host initiated access to guest MSR_TSC_AUX
     (Closes: #838660)
 
