--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,75 @@
+linux (3.2.82-1) UNRELEASED; urgency=medium
+
+  * New upstream stable update:
+    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.82
+    - PCI: Supply CPU physical address (not bus address) to iomem_is_exclusive()
+    - aacraid: Fix for aac_command_thread hang
+    - ext4: fix hang when processing corrupted orphaned inode list
+    - char: Drop bogus dependency of DEVPORT on !M68K
+    - tty: vt, return error when con_startup fails
+    - ACPI / sysfs: fix error code in get_status()
+    - sched/loadavg: Fix loadavg artifacts on fully idle and on fully
+      loaded systems
+    - mmc: mmc: Fix partition switch timeout for some eMMCs
+    - net/mlx4_core: Fix access to uninitialized index
+    - [x86] PCI: Mark Broadwell-EP Home Agent 1 as having non-compliant BARs
+    - PCI: Disable all BAR sizing for devices with non-compliant BARs
+    - fs/cifs: correctly do anonymous authentication
+    - sunrpc: Update RPCBIND_MAXNETIDLEN
+    - Input: uinput - handle compat ioctl for UI_SET_PHYS
+    - wait/ptrace: assume __WALL if the child is traced
+    - [x86] xen/events: Don't move disabled irqs
+    - RDMA/cxgb3: device driver frees DMA memory with different size
+    - Input: xpad - prevent spurious input from wired Xbox 360 controllers
+    - mac80211_hwsim: Add missing check for HWSIM_ATTR_SIGNAL
+    - [armhf] fix PTRACE_SETVFPREGS on SMP systems
+    - [x86] KVM: fix OOPS after invalid KVM_SET_DEBUGREGS
+    - fs: fix d_walk()/non-delayed __d_free() race
+    - usb: f_fs: off by one bug in _ffs_func_bind()
+    - [armhf/omap] usb: musb: Ensure rx reinit occurs for shared_fifo endpoints
+    - [armhf/omap] usb: musb: Stop bulk endpoint while queue is rotated
+    - [armhf/omap] staging:iio: trigger fixes for repeat request of same
+      trigger and allocation failure
+    - [armhf/omap] iio: Fix error handling in iio_trigger_attach_poll_func
+    - [x86] drm/radeon: fix asic initialization for virtualized environments
+    - [x86] kprobes: Clear TF bit in fault on single-stepping
+    - kernel/sysrq, watchdog, sched/core: Reset watchdog on all CPUs while
+      processing sysrq-w
+    - base: make module_create_drivers_dir race-free
+    - [x86] kvm: Fix irq route entries exceeding KVM_MAX_IRQ_ROUTES
+    - IB/mlx4: Properly initialize GRH TClass and FlowLabel in AHs
+    - isa: Call isa_bus_init before dependent ISA bus drivers register
+    - [x86] hwmon: (dell-smm) Restrict fan control and serial number to
+      CAP_SYS_ADMIN by default
+    - ubi: Make recover_peb power cut aware
+    - UBIFS: Implement ->migratepage()
+    - can: fix oops caused by wrong rtnl dellink usage
+    - [x86] xen/pciback: Fix conf_space read/write overlap check.
+    - IB/mlx4: Fix the SQ size of an RC QP
+    - Input: wacom_w8001 - w8001_MAX_LENGTH should be 13
+    - ALSA: dummy: Fix a use-after-free at closing
+    - fs/nilfs2: fix potential underflow in call to crc32_le
+    - [armhf/omap] staging: iio: accel: fix error check
+    - ALSA: echoaudio: Fix memory allocation
+    - NFS: Fix another OPEN_DOWNGRADE bug
+    - batman-adv: Fix use-after-free/double-free of tt_req_node
+    - [x86] ALSA: au88x0: Fix calculation in vortex_wtdma_bufshift()
+    - [x86] amd_nb: Fix boot crash on non-AMD systems
+    - bonding: prevent out of bound accesses
+    - ALSA: timer: Fix negative queue usage by racy accesses
+    - qeth: delete napi struct when removing a qeth device
+    - ecryptfs: don't allow mmap when the lower fs doesn't support it
+      (CVE-2016-1583)
+    - cifs: dynamic allocation of ntlmssp blob
+    - proc: prevent stacking filesystems on top (CVE-2016-1583)
+
+  [ Ben Hutchings ]
+  * Revert "ecryptfs: forbid opening files without mmap handler", redundant
+    with upstream fixes
+  * fs: Move procfs/ecryptfs stacking check into ecryptfs, to avoid ABI change
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Sep 2016 14:08:46 +0100
+
 linux (3.2.81-2) wheezy-security; urgency=high
 
   * linux-source: Fix build failure for non-modular configurations
