--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ linux (3.16.36-1+deb8u2) UNRELEASED; urgency=medium
   * scsi: arcmsr: Buffer overflow in arcmsr_iop_message_xfer() (CVE-2016-7425)
   * Bluetooth: Fix potential NULL dereference in RFCOMM bind callback
     (CVE-2015-8956)
+  * netfilter: x_tables: speed up jump target validation (Closes: #831014)
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 18 Oct 2016 06:39:49 +0200
 
