--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux (3.16.36-1+deb8u2) UNRELEASED; urgency=medium
+linux (3.16.36-1+deb8u2) jessie-security; urgency=high
 
   * KEYS: Fix short sprintf buffer in /proc/keys show function (CVE-2016-7042)
   * scsi: arcmsr: Buffer overflow in arcmsr_iop_message_xfer() (CVE-2016-7425)
@@ -8,7 +8,7 @@ linux (3.16.36-1+deb8u2) UNRELEASED; urgency=medium
   * mm: remove gup_flags FOLL_WRITE games from __get_user_pages()
     (CVE-2016-5195)
 
- -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 18 Oct 2016 06:39:49 +0200
+ -- Salvatore Bonaccorso <carnil@debian.org>  Wed, 19 Oct 2016 06:27:03 +0200
 
 linux (3.16.36-1+deb8u1) jessie-security; urgency=high
 
