Prepare to release linux (3.16.43-2+deb8u3).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux (3.16.43-2+deb8u3) UNRELEASED; urgency=medium
+linux (3.16.43-2+deb8u3) jessie-security; urgency=high
 
   * regulator: core: Fix regualtor_ena_gpio_free not to access pin after
     freeing (CVE-2014-9940)
@@ -19,7 +19,7 @@ linux (3.16.43-2+deb8u3) UNRELEASED; urgency=medium
   [ Ben Hutchings ]
   * dentry name snapshots (CVE-2017-7533)
 
- -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 27 Jul 2017 22:02:24 +0200
+ -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 15 Aug 2017 22:12:18 +0200
 
 linux (3.16.43-2+deb8u2) jessie-security; urgency=high
 
