--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux (3.2.90-1) UNRELEASED; urgency=medium
+linux (3.2.91-1) UNRELEASED; urgency=medium
 
   * New upstream stable update:
     https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.90
@@ -7,6 +7,89 @@ linux (3.2.90-1) UNRELEASED; urgency=medium
       (CVE-2017-7482)
     - mm: simplify find_vma_prev()
     - mm: fix find_vma_prev
+    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.91
+    - xen: do not re-use pirq number cached in pci device msi msg data
+    - usb: dwc3: gadget: make Set Endpoint Configuration macros safe
+    - scsi: aacraid: Fix typo in blink status
+    - scsi: lpfc: Add shutdown method for kexec
+    - USB: serial: io_ti: fix NULL-deref in interrupt callback
+    - USB: serial: safe_serial: fix information leak in completion handler
+    - dvb-usb: don't use stack for firmware load
+    - dvb-usb-firmware: don't do DMA on stack
+    - USB: iowarrior: fix NULL-deref in write
+    - udp: avoid ufo handling on IP payload compression packets
+    - isdn/gigaset: fix NULL-deref at probe
+    - net: wimax/i2400m: fix NULL-deref at probe
+    - USB: idmouse: fix NULL-deref at probe
+    - USB: uss720: fix NULL-deref at probe
+    - USB: wusbcore: fix NULL-deref at probe
+    - uwb: hwa-rc: fix NULL-deref at probe
+    - uwb: i1480-dfu: fix NULL-deref at probe
+    - usb-core: Add LINEAR_FRAME_INTR_BINTERVAL USB quirk
+    - futex: Fix potential use-after-free in FUTEX_REQUEUE_PI
+    - futex: Add missing error handling to FUTEX_REQUEUE_PI
+    - sched/loadavg: Avoid loadavg spikes caused by delayed NO_HZ accounting
+    - perf/core: Fix event inheritance on fork()
+    - mmc: ushc: fix NULL-deref at probe
+    - Input: iforce - validate number of endpoints before using them
+    - Input: cm109 - validate number of endpoints before using them
+    - Input: yealink - validate number of endpoints before using them
+    - Input: hanwang - validate number of endpoints before using them
+    - Input: kbtab - validate number of endpoints before using them
+    - net: ipv6: set route type for anycast routes
+    - USB: usbtmc: add missing endpoint sanity check
+    - ACM gadget: fix endianness in notifications
+    - ALSA: ctxfi: Fix the incorrect check of dma_set_mask() call
+    - scsi: libsas: fix ata xfer length
+    - ALSA: seq: Fix racy cell insertions during snd_seq_pool_done()
+    - net: unix: properly re-increment inflight counter of GC discarded
+      candidates
+    - bpf: try harder on clones when writing into skb
+    - sch_dsmark: fix invalid skb_cow() usage
+    - mmc: sdhci: Do not disable interrupts while waiting for clock
+    - hwmon: (asus_atk0110) fix uninitialized data access
+    - ALSA: seq: Fix race during FIFO resize
+    - net: phy: handle state correctly in phy_stop_machine
+    - IB/qib: fix false-postive maybe-uninitialized warning
+    - netfilter: nf_nat_snmp: Fix panic when snmp_trap_helper fails to register
+    - virtio_balloon: init 1st buffer in stats vq
+    - virtio_balloon: prevent uninitialized variable use
+    - ACPI / APEI: Add missing synchronize_rcu() on NOTIFY_SCI removal
+    - ACPI: Fix incompatibility with mcount-based function graph tracing
+    - xhci: Manually give back cancelled URB if we can't queue it for cancel
+    - ubi/upd: Always flush after prepared for an update
+    - mmc: sdhci: Disable runtime pm when the sdio_irq is enabled
+    - l2tp: fix race in l2tp_recv_common()
+    - l2tp: ensure session can't get removed during pppol2tp_session_ioctl()
+    - l2tp: fix duplicate session creation
+    - l2tp: take a reference on sessions used in genetlink handlers
+    - iscsi-target: Drop work-around for legacy GlobalSAN initiator
+    - af_key: Add lock to key dump
+    - l2tp: take reference on sessions being dumped
+    - xen, fbfront: fix connecting to backend
+    - scsi: sr: Sanity check returned mode data
+    - scsi: sd: Fix capacity calculation with 32-bit sector_t
+    - ptrace: fix PTRACE_LISTEN race corrupting task->state
+    - l2tp: don't mask errors in pppol2tp_setsockopt()
+    - l2tp: don't mask errors in pppol2tp_getsockopt()
+    - [x86] vdso: Plug race between mapping and ELF header setup
+    - ALSA: seq: Don't break snd_use_lock_sync() loop by timeout
+    - [x86] ftrace: Fix triple fault with graph tracing and suspend-to-ram
+    - p9_client_readdir() fix
+    - KEYS: Change the name of the dead type to ".dead" to prevent user access
+    - ACPI / power: Avoid maybe-uninitialized warning
+    - ring-buffer: Have ring_buffer_iter_empty() return true when empty
+    - mac80211: reject ToDS broadcast data frames
+    - smsc75xx: use skb_cow_head() to deal with cloned skbs
+    - cx82310_eth: use skb_cow_head() to deal with cloned skbs
+    - [x86] mm/init.c: Fix devmem_is_allowed() off by one
+    - [x86] mm: Tighten x86 /dev/mem with zeroing reads (CVE-2017-7889)
+    - xen-blkback: don't leak stack data via response ring (CVE-2017-10911)
+    - char: lp: fix possible integer overflow in lp_setup() (CVE-2017-1000363)
+    - fs/exec.c: account for argv/envp pointers (CVE-2017-1000365)
+    - ALSA: timer: Fix race between read and ioctl (CVE-2017-1000380)
+    - ALSA: timer: Fix missing queue indices reset at SNDRV_TIMER_IOCTL_SELECT
+      (CVE-2017-1000380)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 03 Jul 2017 17:17:55 +0100
 
