--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux (3.16.48-2) UNRELEASED; urgency=medium
+
+  * KEYS: Simplify KEYRING_SEARCH_{NO,DO}_STATE_CHECK flags (Closes: #877760)
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 05 Oct 2017 21:54:27 +0200
+
 linux (3.16.48-1) jessie; urgency=medium
 
   * New upstream stable update:
