[s390x] qeth: Ignore ABI changes

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 linux (3.16.48-2) UNRELEASED; urgency=medium
 
+  [ Salvatore Bonaccorso ]
   * KEYS: Simplify KEYRING_SEARCH_{NO,DO}_STATE_CHECK flags (Closes: #877760)
+
+  [ Ben Hutchings ]
+  * [s390x] qeth: Ignore ABI changes
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 05 Oct 2017 21:54:27 +0200
 
