--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ linux (3.16.68-2) UNRELEASED; urgency=medium
   * mwifiex: Fix possible buffer overflows at parsing bss descriptor
     (CVE-2019-3846)
   * mwifiex: Abort at too short BSS descriptor element
+  * mwifiex: Don't abort on small, spec-compliant vendor IEs
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 16 Jun 2019 19:45:46 +0100
 
