--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ linux (3.16.68-2) UNRELEASED; urgency=medium
   * tcp: tcp_fragment() should apply sane memory limits (CVE-2019-11478)
   * tcp: add tcp_min_snd_mss sysctl (CVE-2019-11479)
   * tcp: enforce tcp_min_snd_mss in tcp_mtu_probing()
+  * tcp: fix fack_count accounting on tcp_shift_skb_data()
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 16 Jun 2019 19:45:46 +0100
 
