mm: introduce vma_is_anonymous(vma) helper

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ linux (3.16.68-2) UNRELEASED; urgency=medium
     (CVE-2019-3846)
   * mwifiex: Abort at too short BSS descriptor element
   * mwifiex: Don't abort on small, spec-compliant vendor IEs
+  * mm: introduce vma_is_anonymous(vma) helper
   * mm/mincore.c: make mincore() more conservative (CVE-2019-5489)
   * tcp: limit payload size of sacked skbs (CVE-2019-11477)
   * tcp: tcp_fragment() should apply sane memory limits (CVE-2019-11478)
