--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux (4.19.104-0vyatta6) vyatta; urgency=medium
+
+  * Enable HyperV virtual busses (Bugfix: VRVDR-50334)
+
+ -- Charles (Chas) Williams <ciwillia@vyatta.att-mail.com>  Tue, 10 Mar 2020 10:20:15 -0400
+
 linux (4.19.104-0vyatta5) vyatta; urgency=medium
 
   [ Ramkumar Ganapathysubramanian ]
