--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux (5.4.13-2) UNRELEASED; urgency=medium
+linux (5.4.13-2vyatta1) vyatta; urgency=medium
 
   [ Aurelien Jarno ]
   * [mips*/malta] Enable POWER_RESET_PIIX4_POWEROFF.
@@ -7,7 +7,17 @@ linux (5.4.13-2) UNRELEASED; urgency=medium
   * i40e: prevent memory leak in i40e_setup_macvlans (CVE-2019-19043)
   * ipmi: Fix memory leak in __ipmi_bmc_register (CVE-2019-19046)
 
- -- Aurelien Jarno <aurel32@debian.org>  Sat, 25 Jan 2020 11:56:11 +0100
+  [ Charles (Chas) Williams ]
+  * Merge branch 'sid' of https://salsa.debian.org/kernel-team/linux into
+    linux-vyatta-5.4.y
+  * Revert "Build-Depend on kernel-wedge 2.102; remove workaround in
+    debian/rules.real"
+  * Revert "Compile with gcc-9 on all architectures"
+  * Import local patches and build from linux-vyatta-4.19 branch (Bugfix:
+    VRVDR-50692)
+  * Update local patches (Bugfix: VRVDR-50692)
+
+ -- Charles (Chas) Williams <ciwillia@vyatta.att-mail.com>  Mon, 18 May 2020 10:31:29 -0400
 
 linux (5.4.13-1) unstable; urgency=medium
 
