--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux (5.4.58-0vyatta1) vyatta; urgency=medium
+
+  * Empty commit to fix bad version
+
+ -- Charles (Chas) Williams <ciwillia@vyatta.att-mail.com>  Wed, 19 Aug 2020 11:42:47 -0400
+
 linux (5.4.48-0vyatta1) vyatta; urgency=medium
 
   [ Charles (Chas) Williams ]
