--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linux (4.19.139-0vyatta1) vyatta; urgency=medium
+
+  * Merge tag 'v4.19.139' from linux-stable into linux-vyatta-4.19.y
+  * Update local patches for latest stable kernel (Bugfix: VRVDR-52618)
+
+ -- Charles (Chas) Williams <ciwillia@vyatta.att-mail.com>  Thu, 20 Aug 2020 11:10:27 -0400
+
 linux (4.19.127-0vyatta1) vyatta; urgency=medium
 
   * Merge tag 'v4.19.127' from linux-stable into linux-vyatta-4.19.y
